fix: increase contrast for #question h3 background

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -344,7 +344,7 @@ tr, td {
             margin-bottom: 0.0rem;
             color: white;
             text-shadow: 1px 1px rgb(188, 188, 188);
-            background-color: rgb(208, 144, 155);
+            background-color: #903C4A;
             padding: 0.1rem;
         }
 
